--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass-dev": "sass --watch --update --style=expanded src/styles/scss:src/styles",
+    "sass-prod": "sass --no-source-map --style=compressed src/styles/scss:src/styles"
   },
   "eslintConfig": {
     "extends": [
